[gd_scene load_steps=7 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://DirtAutoTile.tres" type="TileSet" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://WorldSelect.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]

script/source = "extends Area2D"

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.9546, 45.8246 )

[node name="Loby" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 6, 1, 0, 196609, 2, 0, 196609, 3, 0, 196609, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 196609, 8, 0, 196609, 9, 0, 196609, 10, 0, 196609, 11, 0, 196609, 12, 0, 196609, 13, 0, 196609, 14, 0, 196609, 15, 0, 196609, 16, 0, 196609, 17, 0, 196609, 18, 0, 196609, 19, 0, 196609, 20, 0, 7, 65536, 0, 65541, 65556, 0, 65541, 131072, 0, 65541, 131092, 0, 65541, 196608, 0, 65541, 196628, 0, 65541, 262144, 0, 65541, 262164, 0, 65541, 327680, 0, 8, 327681, 0, 65536, 327682, 0, 65536, 327683, 0, 65536, 327684, 0, 9, 327685, 0, 196610, 327687, 0, 196608, 327688, 0, 131076, 327689, 0, 196610, 327691, 0, 196608, 327692, 0, 131076, 327693, 0, 196610, 327695, 0, 196608, 327696, 0, 131076, 327697, 0, 196610, 327699, 0, 196608, 327700, 0, 196612, 393216, 0, 131073, 393217, 0, 196619, 393218, 0, 196619, 393219, 0, 196619, 393220, 0, 131074, 393224, 0, 65541, 393228, 0, 65541, 393232, 0, 65541, 393236, 0, 65541, 458752, 0, 131073, 458753, 0, 196619, 458754, 0, 196619, 458755, 0, 196619, 458756, 0, 131074, 458760, 0, 65541, 458764, 0, 65541, 458768, 0, 65541, 458772, 0, 65541, 524288, 0, 131073, 524289, 0, 196619, 524290, 0, 196619, 524291, 0, 196619, 524292, 0, 131074, 524296, 0, 65541, 524300, 0, 65541, 524304, 0, 65541, 524308, 0, 65541, 589824, 0, 65537, 589825, 0, 131072, 589826, 0, 131072, 589827, 0, 131072, 589828, 0, 65547, 589829, 0, 196609, 589830, 0, 196609, 589831, 0, 196609, 589832, 0, 196611, 589833, 0, 196609, 589834, 0, 196609, 589835, 0, 196609, 589836, 0, 196611, 589837, 0, 196609, 589838, 0, 196609, 589839, 0, 196609, 589840, 0, 196611, 589841, 0, 196609, 589842, 0, 196609, 589843, 0, 196609, 589844, 0, 65543 )

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 117.863, 244.319 )

[node name="LvL1" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="TileMap2" type="TileMap" parent="LvL1" index="0"]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327686, 0, 196613 )

[node name="Area2D" type="Area2D" parent="LvL1/TileMap2" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LvL1/TileMap2/Area2D" index="0"]

position = Vector2( 288.391, 287.601 )
scale = Vector2( 1.05713, 0.738787 )
shape = SubResource( 2 )

[node name="LvL2" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="TileMap3" type="TileMap" parent="LvL2" index="0"]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327690, 0, 196613 )

[node name="Area2D" type="Area2D" parent="LvL2/TileMap3" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LvL2/TileMap3/Area2D" index="0"]

position = Vector2( 288.391, 287.601 )
scale = Vector2( 1.05713, 0.738787 )
shape = SubResource( 2 )

[node name="LvL3" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="TileMap4" type="TileMap" parent="LvL3" index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327694, 0, 196613 )

[node name="Area2D" type="Area2D" parent="LvL3/TileMap4" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LvL3/TileMap4/Area2D" index="0"]

position = Vector2( 288.391, 287.601 )
scale = Vector2( 1.05713, 0.738787 )
shape = SubResource( 2 )

[node name="LvL4" type="Node" parent="." index="5"]

[node name="TileMap5" type="TileMap" parent="LvL4" index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327698, 0, 196613 )

[node name="Area2D" type="Area2D" parent="LvL4/TileMap5" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LvL4/TileMap5/Area2D" index="0"]

position = Vector2( 291.391, 287.601 )
scale = Vector2( 1.05713, 0.738787 )
shape = SubResource( 2 )

[node name="WorldSelect" parent="." index="6" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 419.465, 472.013 )
next_world = "res://World.tscn"

[node name="Level 1" type="Label" parent="WorldSelect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -33.0
margin_top = -129.0
margin_right = 25.0
margin_bottom = -98.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LEVEL 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="WorldSelect2" parent="." index="7" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 676.293, 468.876 )
next_world = "res://World2.tscn"

[node name="Level 2" type="Label" parent="WorldSelect2" index="2"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -34.0
margin_top = -126.0
margin_right = 24.0
margin_bottom = -95.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LEVEL 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="WorldSelect3" parent="." index="8" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 929.473, 471.936 )
next_world = "res://World3.tscn"

[node name="Level 3" type="Label" parent="WorldSelect3" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -31.0
margin_top = -129.0
margin_right = 27.0
margin_bottom = -98.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LEVEL 3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="WorldSelect4" parent="." index="9" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 1185.46, 478.181 )
next_world = "res://World4.tscn"

[node name="Level 4" type="Label" parent="WorldSelect4" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -134.0
margin_right = 26.0
margin_bottom = -103.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LEVEL 4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]


